c2prj1_cards/grade.txt
Grading at Fri Jan 17 12:49:00 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:77:11: error: incompatible types when returning type ‘int’ but ‘card_t {aka struct card_tag}’ was expected
    return 0;
           ^
cards.c:81:18: error: incompatible types when returning type ‘int’ but ‘card_t {aka struct card_tag}’ was expected
           return 0;
                  ^
Could not compile your card.c!

Overall Grade: FAILED
